--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
   "private": true,
   "devDependencies": {
-    "@types/react": "16.0.16",
-    "@types/react-dom": "^16.0.2",
-    "@types/webpack": "^3.0.13",
+    "@types/react": "16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "@types/webpack": "^3.8.2",
     "add-asset-html-webpack-plugin": "^2.1.2",
-    "awesome-typescript-loader": "^3.2.3",
-    "copy-webpack-plugin": "^4.2.0",
+    "awesome-typescript-loader": "^3.4.1",
+    "copy-webpack-plugin": "^4.3.1",
     "html-webpack-plugin": "^2.30.1",
     "mobx-react-devtools": "^4.2.15",
     "noop-loader": "^1.0.0",
     "null-loader": "^0.1.1",
     "sw-precache": "^5.2.0",
-    "typescript": "^2.5.3",
+    "typescript": "^2.6.2",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
-    "webpack": "^3.8.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.3"
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dev-server": "^2.11.0"
   },
   "dependencies": {
-    "emotion": "^8.0.8",
-    "mobx": "^3.3.1",
-    "mobx-react": "^4.3.3",
-    "mobx-utils": "^3.2.1",
+    "emotion": "^8.0.12",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
+    "mobx-utils": "^3.2.2",
     "nprogress": "^0.2.0",
-    "query-string": "^5.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-emotion": "^8.0.8",
+    "query-string": "^5.0.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-emotion": "^8.0.12",
     "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.0",
-    "router5": "^5.4.0",
-    "serializr": "^1.1.13",
-    "styled-system": "^1.0.8"
+    "router5": "^5.7.2",
+    "serializr": "^1.1.14",
+    "styled-system": "^1.1.1"
   }
 }
