--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "add-asset-html-webpack-plugin": "^2.1.2",
     "awesome-typescript-loader": "^3.4.1",
     "copy-webpack-plugin": "^4.3.1",
+    "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
+    "inferno-server": "^3.10.1",
     "mobx-react-devtools": "^4.2.15",
+    "module-alias": "^2.0.3",
     "noop-loader": "^1.0.0",
     "null-loader": "^0.1.1",
+    "path-parser": "^3.0.1",
     "sw-precache": "^5.2.0",
+    "ts-node": "^4.1.0",
     "typescript": "^2.6.2",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
     "uglifyjs-webpack-plugin": "^1.1.6",
@@ -20,7 +25,7 @@
     "webpack-dev-server": "^2.11.0"
   },
   "dependencies": {
-    "emotion": "^8.0.12",
+    "inferno-compat": "^3.10.1",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-utils": "^3.2.2",
@@ -28,11 +33,13 @@
     "query-string": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-emotion": "^8.0.12",
     "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.0",
     "router5": "^5.7.2",
     "serializr": "^1.1.14",
-    "styled-system": "^1.1.1"
+    "styled-components": "^2.4.0",
+    "styled-system": "^1.1.1",
+    "tslib": "^1.9.0",
+    "universal-url": "^1.0.0"
   }
 }
