--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "copy-webpack-plugin": "^4.3.1",
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
+    "inferno-compat": "^3.10.1",
     "inferno-server": "^3.10.1",
     "mobx-react-devtools": "^4.2.15",
     "module-alias": "^2.0.3",
@@ -17,15 +18,16 @@
     "path-parser": "^3.0.1",
     "sw-precache": "^5.2.0",
     "ts-node": "^4.1.0",
+    "tslib": "^1.9.0",
     "typescript": "^2.6.2",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
     "uglifyjs-webpack-plugin": "^1.1.6",
+    "universal-url": "^1.0.0",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.2",
     "webpack-dev-server": "^2.11.0"
   },
   "dependencies": {
-    "inferno-compat": "^3.10.1",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-utils": "^3.2.2",
@@ -34,12 +36,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
-    "react-helmet": "^5.2.0",
     "router5": "^5.7.2",
     "serializr": "^1.1.14",
     "styled-components": "^2.4.0",
-    "styled-system": "^1.1.1",
-    "tslib": "^1.9.0",
-    "universal-url": "^1.0.0"
+    "styled-system": "^1.1.1"
   }
 }
