--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@types/webpack": "^3.8.2",
     "add-asset-html-webpack-plugin": "^2.1.2",
     "awesome-typescript-loader": "^3.4.1",
+    "babel-core": "^6.26.0",
+    "babel-plugin-emotion": "^9.0.0-2",
+    "compression": "^1.7.1",
     "copy-webpack-plugin": "^4.3.1",
     "emotion-server": "^9.0.0-2",
     "express": "^4.16.2",
@@ -27,6 +30,9 @@
     "webpack-dev-server": "^2.11.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.2",
+    "@fortawesome/fontawesome-free-solid": "^5.0.4",
+    "@fortawesome/react-fontawesome": "0.0.17",
     "emotion": "^9.0.0-2",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
@@ -36,7 +42,6 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-emotion": "^9.0.0-2",
-    "react-fontawesome": "^1.6.1",
     "router5": "^5.7.2",
     "serializr": "^1.1.14",
     "styled-system": "^1.1.1"
