--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mobx-react-devtools": "^4.2.15",
     "module-alias": "^2.0.3",
     "path-parser": "^3.0.1",
-    "sw-precache": "^5.2.0",
+    "sw-precache": "^5.2.1",
     "ts-node": "^4.1.0",
     "tslib": "^1.9.0",
     "typescript": "^2.6.2",
@@ -42,6 +42,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-emotion": "^9.0.0-2",
+    "react-portal": "^4.1.2",
     "router5": "^5.7.2",
     "serializr": "^1.1.14",
     "styled-system": "^1.1.1"
