--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "private": true,
   "devDependencies": {
-    "@types/react": "16.0.34",
+    "@types/react": "16.0.36",
     "@types/react-dom": "^16.0.3",
-    "@types/webpack": "^3.8.2",
+    "@types/webpack": "^3.8.4",
     "add-asset-html-webpack-plugin": "^2.1.2",
     "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
-    "babel-plugin-emotion": "^9.0.0-2",
+    "babel-plugin-emotion": "^9.0.0",
     "compression": "^1.7.1",
     "copy-webpack-plugin": "^4.3.1",
-    "emotion-server": "^9.0.0-2",
+    "emotion-server": "^9.0.0",
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "inferno-compat": "^3.10.1",
@@ -23,28 +23,28 @@
     "tslib": "^1.9.0",
     "typescript": "^2.7.1",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
-    "uglifyjs-webpack-plugin": "^1.1.6",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "universal-url": "^1.0.0",
     "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-dev-server": "^2.11.0"
+    "webpack-bundle-analyzer": "^2.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.2",
-    "@fortawesome/fontawesome-free-solid": "^5.0.4",
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.17",
-    "emotion": "^9.0.0-2",
+    "emotion": "^9.0.0",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-utils": "^3.2.2",
     "nprogress": "^0.2.0",
-    "query-string": "^5.0.1",
+    "query-string": "^5.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-emotion": "^9.0.0-2",
+    "react-emotion": "^9.0.0",
     "react-portal": "^4.1.2",
-    "router5": "^5.7.2",
+    "router5": "^5.8.0",
     "serializr": "^1.1.14",
-    "styled-system": "^1.1.1"
+    "styled-system": "^1.1.4"
   }
 }
