--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "copy-webpack-plugin": "^4.3.1",
     "emotion-server": "^9.0.0",
     "express": "^4.16.2",
+    "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.30.1",
     "inferno-compat": "^3.10.1",
     "inferno-server": "^3.10.1",
