--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,15 +1,30 @@
 {
-  "short_name": "hnclient",
-  "name": "HN Client",
+  "short_name": "HN",
+  "name": "HN",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "favicon-16x16.png",
       "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "start_url": "./",
   "display": "standalone",
-  "background_color": "#fff",
-  "theme_color": "#f5cc78"
+  "background_color": "#E16400",
+  "theme_color": "#FF6600"
 }
