--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,10 @@
     "target": "es5",
     "moduleResolution": "node",
     "baseUrl": "src",
-    "allowSyntheticDefaultImports": true,
     "jsx": "react",
     "outDir": "dist-ts/",
+    "allowSyntheticDefaultImports": true,
+    "downlevelIteration": true,
     "noImplicitAny": false,
     "noImplicitThis": true,
     "noImplicitReturns": true,
@@ -17,9 +18,10 @@
     "declaration": false,
     "removeComments": true,
     "preserveConstEnums": true,
+    "importHelpers": true,
     "lib": [
-      "es6",
-      "es7",
+      "es2015",
+      "es2016",
       "dom"
     ]
   },
