--- a/firebase.json
+++ b/firebase.json
@@ -26,7 +26,7 @@
         }]
       },
       {
-        "source": "**/*.@(jpg|jpeg|gif|png)",
+        "source": "**/*.@(jpg|jpeg|gif|png|ico)",
         "headers": [{
           "key": "Cache-Control",
           "value": "max-age=7200"
