--- a/firebase.json
+++ b/firebase.json
@@ -33,7 +33,7 @@
         }]
       },
       {
-        "source": "**/*.@(js)",
+        "source": "/js/**/*.@(js)",
         "headers": [{
           "key": "Cache-Control",
           "value": "max-age=31536000"
