--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_style = tab
 end_of_line = lf
 insert_final_newline = true
 
-[*.{js,jsx,ts,tsx,css,json,sh,yml,html}]
+[*.{js,jsx,ts,tsx,css,json,sh,yml,html,md}]
 charset = utf-8
 indent_style = space
 indent_size = 2
