--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "express": "^4.16.2",
     "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.30.1",
-    "inferno-compat": "^3.10.1",
-    "inferno-server": "^3.10.1",
+    "inferno": "^4.0.3",
+    "inferno-clone-vnode": "^4.0.3",
+    "inferno-compat": "^4.0.3",
+    "inferno-create-class": "^4.0.3",
+    "inferno-create-element": "^4.0.3",
+    "inferno-server": "^4.0.3",
     "mobx-react-devtools": "^4.2.15",
     "module-alias": "^2.0.3",
     "path-parser": "^3.0.1",
