--- a/package.json
+++ b/package.json
@@ -1,54 +1,57 @@
 {
   "private": true,
   "devDependencies": {
-    "@types/react": "16.0.38",
+    "@types/react": "16.1.0",
     "@types/react-dom": "^16.0.4",
-    "@types/webpack": "^3.8.8",
-    "add-asset-html-webpack-plugin": "^2.1.2",
-    "awesome-typescript-loader": "^3.4.1",
+    "@types/webpack": "^4.1.3",
+    "add-asset-html-webpack-plugin": "^2.1.3",
+    "awesome-typescript-loader": "^5.0.0-1",
     "babel-core": "^6.26.0",
-    "babel-plugin-emotion": "^9.0.1",
+    "babel-plugin-emotion": "^9.1.0",
     "compression": "^1.7.2",
-    "copy-webpack-plugin": "^4.4.1",
-    "emotion-server": "^9.0.1",
-    "express": "^4.16.2",
-    "favicons-webpack-plugin": "0.0.7",
-    "html-webpack-plugin": "^2.30.1",
-    "inferno": "^4.0.4",
-    "inferno-clone-vnode": "^4.0.4",
-    "inferno-compat": "^4.0.4",
-    "inferno-create-class": "^4.0.4",
-    "inferno-create-element": "^4.0.4",
-    "inferno-server": "^4.0.4",
-    "mobx-react-devtools": "^4.2.15",
+    "copy-webpack-plugin": "^4.5.1",
+    "emotion-server": "^9.1.0",
+    "express": "^4.16.3",
+    "favicons-webpack-plugin": "0.0.8",
+    "html-webpack-plugin": "^3.1.0",
+    "inferno": "^5.0.1",
+    "inferno-clone-vnode": "^5.0.1",
+    "inferno-compat": "^5.0.1",
+    "inferno-create-class": "^5.0.1",
+    "inferno-create-element": "^5.0.1",
+    "inferno-server": "^5.0.1",
+    "mobx-react-devtools": "^5.0.1",
     "module-alias": "^2.0.6",
-    "path-parser": "^3.0.1",
+    "path-parser": "^4.0.2",
     "sw-precache": "^5.2.1",
-    "ts-node": "^4.1.0",
+    "ts-node": "^5.0.1",
     "tslib": "^1.9.0",
-    "typescript": "^2.7.2",
+    "typescript": "^2.8.1",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
-    "uglifyjs-webpack-plugin": "^1.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "universal-url": "^1.0.0",
-    "webpack": "^3.11.0",
-    "webpack-bundle-analyzer": "^2.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^4.4.1",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.3",
-    "@fortawesome/fontawesome-free-solid": "^5.0.6",
-    "@fortawesome/react-fontawesome": "0.0.17",
-    "emotion": "^9.0.1",
-    "mobx": "^3.5.1",
-    "mobx-react": "^4.4.2",
-    "mobx-utils": "^3.2.2",
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-solid": "^5.0.9",
+    "@fortawesome/react-fontawesome": "0.0.18",
+    "clean-tag": "^1.0.4",
+    "emotion": "^9.1.0",
+    "emotion-theming": "^9.0.0",
+    "mobx": "^4.1.1",
+    "mobx-react": "^5.0.0",
+    "mobx-utils": "^4.0.0",
     "nprogress": "^0.2.0",
-    "query-string": "^5.1.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-emotion": "^9.0.1",
-    "router5": "^5.8.2",
+    "query-string": "^6.0.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-emotion": "^9.1.0",
+    "router5": "^5.8.3",
     "serializr": "^1.1.14",
-    "styled-system": "^1.1.4"
+    "styled-system": "^2.2.1"
   }
 }
